# jserialport

./: .gitignore  CMakeLists.txt  README.md  pom.xml
jserialport/: pom.xml
jserialport-native/: pom.xml
jserialport-native/linux-arm32-vfp-hflt/: README.md  build.sh  pom.xml  toolchain-linux-arm32.cmake.txt  toolchain-linux-i386.cmake.txt
jserialport-native/linux-arm32-vfp-hflt/src/main/cpp/: SerialPort.cc
jserialport-native/linux-x86-amd64/: build.sh  pom.xml
jserialport-native/linux-x86-amd64/src/main/cpp/: SerialPort.cc
jserialport-native/linux-x86-amd64/src/test/java/com/metapatrol/jserialport/jni/: LINUXX86AMD64_LoadLibraryTest.java
jserialport-native/src/main/cpp/: JavaConverter.cc  JavaConverter.h  JavaException.cc  JavaException.h  SerialPort.h  com_metapatrol_jserialport_SerialPort.cc  com_metapatrol_jserialport_SerialPort.h  com_metapatrol_jserialport_SerialPort_callback.h
jserialport-url/: pom.xml
jserialport-url-registration/: pom.xml
jserialport-url-registration/src/main/java/sun/net/www/protocol/serialport/: Handler.java  (+1 more)
jserialport-url/src/test/java/com/metapatrol/jserialport/url/: URLStreamHandlerRegistrar.java  URLTest.java
jserialport/src/main/java/com/metapatrol/jserialport/: Baud.java  LibraryLoader.java  SerialPort.java  SerialPortConfiguration.java
jserialport/src/test/java/com/metapatrol/jserialport/: LibraryLoadingTest.java  SerialPortIntegrationIT.java
jserialport/src/test/java/com/metapatrol/jserialport/annotation/: IntegrationTest.java
jserialport/src/test/java/com/metapatrol/jserialport/util/: StringUtil.java
(+10 files in other folders)
